# bw_superstructure

./: .gitignore  CITATION.cff  LICENSE.txt  README.md  bw_superstructure_Individual Contributor License Agreement.docx  example.py  pyproject.toml
bw_superstructure/: __about__.py  __init__.py  bw.py  calculationsetup.py  export.py  lcacalculation.py  tools.py  workflow.py
bw_superstructure/adapted/: controllers_database.py  superstructure_manager.py
bw_superstructure/bwutils/: calculations.py  commontasks.py  metada.py  metadata.py  multilca.py  strategies.py  utils.py
bw_superstructure/superstructure/: activities.py  dataframe.py  excel.py  importer.py  manager.py  mlca.py  utils.py
example/: example.py  scenario-example.py
example/inputs/: LICENSE  functional_units.xlsx  functional_units_2.xlsx  functional_units_sander.xlsx  lcia_methods.yaml  lcia_methods_EF.yaml  template_scenario_difference_file.xlsx
