[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bw-superstructure"
description = 'allows prospective LCA calculations for scenarios using the superstructure and scenario-difference-file approach of the activity-browser and brightway2'
readme = "README.md"
requires-python = ">=3.7"
license = "LGPL-3.0"
keywords = []
authors = [
  { name = "Carina Harpprecht", email = "Carina.Harpprecht@dlr.de" },
  { name = "Benjamin Fuchs", email = "Benjamin.Fuchs@dlr.de" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "brightway2==2.4",
  "bw2analyzer==0.10",
  "bw2calc==1.8.1",
  "bw2data==3.6.5",
  "bw2io==0.8.6",
  "bw2parameters==0.7",
  "bw_migrations==0.1",
  "pyarrow==11.0",
  "ruamel.yaml==0.17",
  "hatch==1.6",
  "numpy==1.23",
]
dynamic = ["version"]

[project.urls]
Documentation = "https://github.com/dlr-ve-esy/bw_superstructure/blob/main/README.md"
Issues = "https://github.com/dlr-ve-esy/bw_superstructure/issues"
Source = "https://github.com/dlr-ve-esy/bw_superstructure"

[tool.hatch.version]
path = "bw_superstructure/__about__.py"

[tool.hatch.envs.default]
dependencies = ["pytest", "pytest-cov"]
[tool.hatch.envs.default.scripts]
cov = "pytest --cov-report=term-missing --cov-config=pyproject.toml --cov=bw_superstructure --cov=tests {args}"
no-cov = "cov --no-cov {args}"

[[tool.hatch.envs.test.matrix]]
python = ["37", "38", "39", "310"]

[tool.coverage.run]
branch = true
parallel = true
omit = ["bw_superstructure/__about__.py"]

[tool.coverage.report]
exclude_lines = ["no cov", "if __name__ == .__main__.:", "if TYPE_CHECKING:"]
